@@ -109,6 +109,26 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -239,16 +259,39 @@ name|started
 decl_stmt|;
 specifier|private
 name|int
-name|clientPort
+name|defaultClientPort
 init|=
 literal|21818
 decl_stmt|;
 comment|// use non-standard port
 specifier|private
+name|int
+name|clientPort
+init|=
+name|defaultClientPort
+decl_stmt|;
+specifier|private
+name|int
+name|zooKeeperCandidateNum
+init|=
+literal|0
+decl_stmt|;
+specifier|private
 name|NIOServerCnxn
 operator|.
 name|Factory
 name|standaloneServerFactory
+decl_stmt|;
+specifier|private
+name|int
+name|currentZooKeeper
+decl_stmt|;
+specifier|private
+name|List
+argument_list|<
+name|ZooKeeperServer
+argument_list|>
+name|zooKeeperServers
 decl_stmt|;
 specifier|private
 name|int
@@ -266,6 +309,17 @@ operator|.
 name|started
 operator|=
 literal|false
+expr_stmt|;
+name|currentZooKeeper
+operator|=
+operator|-
+literal|1
+expr_stmt|;
+name|zooKeeperServers
+operator|=
+operator|new
+name|ArrayList
+argument_list|()
 expr_stmt|;
 block|}
 specifier|public
@@ -307,6 +361,15 @@ operator|=
 name|tickTime
 expr_stmt|;
 block|}
+specifier|public
+name|int
+name|getZooKeeperCandidateNum
+parameter_list|()
+block|{
+return|return
+name|zooKeeperCandidateNum
+return|;
+block|}
 comment|// / XXX: From o.a.zk.t.ClientBase
 specifier|private
 specifier|static
@@ -335,7 +398,6 @@ literal|100
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * @param baseDir    * @return ClientPort server bound to.    * @throws IOException    * @throws InterruptedException    */
 specifier|public
 name|int
 name|startup
@@ -348,12 +410,62 @@ name|IOException
 throws|,
 name|InterruptedException
 block|{
+return|return
+name|startup
+argument_list|(
+name|baseDir
+argument_list|,
+literal|1
+argument_list|)
+return|;
+block|}
+comment|/**    * @param baseDir    * @param numZooKeeperServers    * @return ClientPort server bound to.    * @throws IOException    * @throws InterruptedException    */
+specifier|public
+name|int
+name|startup
+parameter_list|(
+name|File
+name|baseDir
+parameter_list|,
+name|int
+name|numZooKeeperServers
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+if|if
+condition|(
+name|numZooKeeperServers
+operator|<=
+literal|0
+condition|)
+return|return
+operator|-
+literal|1
+return|;
 name|setupTestEnv
 argument_list|()
 expr_stmt|;
 name|shutdown
 argument_list|()
 expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numZooKeeperServers
+condition|;
+name|i
+operator|++
+control|)
+block|{
 name|File
 name|dir
 init|=
@@ -362,7 +474,9 @@ name|File
 argument_list|(
 name|baseDir
 argument_list|,
-literal|"zookeeper"
+literal|"zookeeper_"
+operator|+
+name|i
 argument_list|)
 operator|.
 name|getAbsoluteFile
@@ -412,6 +526,14 @@ argument_list|,
 name|tickTimeToUse
 argument_list|)
 decl_stmt|;
+name|zooKeeperServers
+operator|.
+name|add
+argument_list|(
+name|server
+argument_list|)
+expr_stmt|;
+block|}
 while|while
 condition|(
 literal|true
@@ -457,11 +579,20 @@ continue|continue;
 block|}
 break|break;
 block|}
+name|currentZooKeeper
+operator|=
+literal|0
+expr_stmt|;
 name|standaloneServerFactory
 operator|.
 name|startup
 argument_list|(
-name|server
+name|zooKeeperServers
+operator|.
+name|get
+argument_list|(
+name|currentZooKeeper
+argument_list|)
 argument_list|)
 expr_stmt|;
 if|if
@@ -486,6 +617,12 @@ block|}
 name|started
 operator|=
 literal|true
+expr_stmt|;
+name|zooKeeperCandidateNum
+operator|=
+name|numZooKeeperServers
+operator|-
+literal|1
 expr_stmt|;
 name|LOG
 operator|.
@@ -597,6 +734,199 @@ name|started
 operator|=
 literal|false
 expr_stmt|;
+name|zooKeeperCandidateNum
+operator|=
+literal|0
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Shutdown MiniZK Server on client port: "
+operator|+
+name|clientPort
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**@return clientPort return clientPort if there is another ZooKeeper Candidate can run; return    *         -1, if there is no candidates.    * @throws IOException    * @throws InterruptedException     */
+specifier|public
+name|int
+name|killCurrentZooKeeper
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+if|if
+condition|(
+operator|!
+name|started
+condition|)
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+comment|// Shutdown the current one
+name|standaloneServerFactory
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|waitForServerDown
+argument_list|(
+name|clientPort
+argument_list|,
+name|CONNECTION_TIMEOUT
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Waiting for shutdown of standalone server"
+argument_list|)
+throw|;
+block|}
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Kill the current MiniZK Server on client port: "
+operator|+
+name|clientPort
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|zooKeeperCandidateNum
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+operator|-
+literal|1
+return|;
+block|}
+comment|// Start another ZooKeeper Server
+name|clientPort
+operator|=
+name|defaultClientPort
+expr_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+try|try
+block|{
+name|standaloneServerFactory
+operator|=
+operator|new
+name|NIOServerCnxn
+operator|.
+name|Factory
+argument_list|(
+operator|new
+name|InetSocketAddress
+argument_list|(
+name|clientPort
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|BindException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Failed binding ZK Server to client port: "
+operator|+
+name|clientPort
+argument_list|)
+expr_stmt|;
+comment|//this port is already in use. try to use another
+name|clientPort
+operator|++
+expr_stmt|;
+continue|continue;
+block|}
+break|break;
+block|}
+name|currentZooKeeper
+operator|=
+operator|(
+operator|++
+name|currentZooKeeper
+operator|)
+operator|%
+name|zooKeeperServers
+operator|.
+name|size
+argument_list|()
+expr_stmt|;
+name|standaloneServerFactory
+operator|.
+name|startup
+argument_list|(
+name|zooKeeperServers
+operator|.
+name|get
+argument_list|(
+name|currentZooKeeper
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|waitForServerUp
+argument_list|(
+name|clientPort
+argument_list|,
+name|CONNECTION_TIMEOUT
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Waiting for startup of standalone server"
+argument_list|)
+throw|;
+block|}
+name|started
+operator|=
+literal|true
+expr_stmt|;
+name|zooKeeperCandidateNum
+operator|--
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Started another candidate MiniZK Server on client port: "
+operator|+
+name|clientPort
+argument_list|)
+expr_stmt|;
+return|return
+name|clientPort
+return|;
 block|}
 comment|// XXX: From o.a.zk.t.ClientBase
 specifier|private
