@@ -1160,6 +1160,29 @@ name|startMiniZKCluster
 argument_list|(
 name|setupClusterTestBuildDir
 argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+return|;
+block|}
+comment|/**    * Call this if you only want a zk cluster.    * @param zooKeeperServerNum    * @see #startMiniZKCluster() if you want zk + dfs + hbase mini cluster.    * @throws Exception    * @see #shutdownMiniZKCluster()    * @return zk cluster started.    */
+specifier|public
+name|MiniZooKeeperCluster
+name|startMiniZKCluster
+parameter_list|(
+name|int
+name|zooKeeperServerNum
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+return|return
+name|startMiniZKCluster
+argument_list|(
+name|setupClusterTestBuildDir
+argument_list|()
+argument_list|,
+name|zooKeeperServerNum
 argument_list|)
 return|;
 block|}
@@ -1170,6 +1193,29 @@ parameter_list|(
 specifier|final
 name|File
 name|dir
+parameter_list|)
+throws|throws
+name|Exception
+block|{
+return|return
+name|startMiniZKCluster
+argument_list|(
+name|dir
+argument_list|,
+literal|1
+argument_list|)
+return|;
+block|}
+specifier|private
+name|MiniZooKeeperCluster
+name|startMiniZKCluster
+parameter_list|(
+specifier|final
+name|File
+name|dir
+parameter_list|,
+name|int
+name|zooKeeperServerNum
 parameter_list|)
 throws|throws
 name|Exception
@@ -1217,6 +1263,8 @@ operator|.
 name|startup
 argument_list|(
 name|dir
+argument_list|,
+name|zooKeeperServerNum
 argument_list|)
 decl_stmt|;
 name|this
