@@ -215,6 +215,22 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hbase
+operator|.
+name|zookeeper
+operator|.
+name|MiniZooKeeperCluster
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hdfs
 operator|.
 name|MiniDFSCluster
@@ -704,6 +720,134 @@ block|}
 finally|finally
 block|{
 name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testMiniZooKeeper
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MiniZooKeeperCluster
+name|cluster1
+init|=
+name|this
+operator|.
+name|hbt
+operator|.
+name|startMiniZKCluster
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|cluster1
+operator|.
+name|getZooKeeperCandidateNum
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|(
+name|cluster1
+operator|.
+name|killCurrentZooKeeper
+argument_list|()
+operator|==
+operator|-
+literal|1
+operator|)
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cluster1
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+name|this
+operator|.
+name|hbt
+operator|.
+name|shutdownMiniZKCluster
+argument_list|()
+expr_stmt|;
+name|MiniZooKeeperCluster
+name|cluster2
+init|=
+name|this
+operator|.
+name|hbt
+operator|.
+name|startMiniZKCluster
+argument_list|(
+literal|5
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|assertEquals
+argument_list|(
+literal|4
+argument_list|,
+name|cluster2
+operator|.
+name|getZooKeeperCandidateNum
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|(
+name|cluster2
+operator|.
+name|killCurrentZooKeeper
+argument_list|()
+operator|>
+literal|0
+operator|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|(
+name|cluster2
+operator|.
+name|killCurrentZooKeeper
+argument_list|()
+operator|>
+literal|0
+operator|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|cluster2
+operator|.
+name|getZooKeeperCandidateNum
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|cluster2
 operator|.
 name|shutdown
 argument_list|()
