@@ -86,6 +86,8 @@ Release 0.91.0 - Unreleased
                needs an upper bound added (Ted Yu via Stack)
    HBASE-3676  Update region server load for AssignmentManager through
                regionServerReport() (Ted Yu via Stack)
+   HBASE-3052  Add ability to have multiple ZK servers in a quorum in
+               MiniZooKeeperCluster for test writing (Liyin Tang via Stack)
 
   TASK
    HBASE-3559  Move report of split to master OFF the heartbeat channel
